update tests
Signed-off-by: Nicklas Körtge <nicklas.koertge1@ibm.com>